--- a/css/styles.css
+++ b/css/styles.css
@@ -455,9 +455,24 @@ body { background:url(..//kalon.jpg) no-repeat center top;padding:0;margin:0; }
 
 #nav li {
 	float: left; padding:0 14px 0 14px;}
-#nav li a { font-size:15px;}
-#nav li a:hover { text-decoration:none;}
+#nav li a { font-size:13px; text-transform:uppercase; color:#000; font-weight:800;}
+#nav li a:hover { text-decoration:none; color:#FF00AA; }
 
-#welcome {float:left; padding-top:10px; width:100% ; height:700px; background-image:url('/images/carousel.jpg'); background-repeat:no-repeat; background-size:contain; }
+#welcome {float:left; padding-top:10px; width:100% ; height:300px; background-image:url('/images/carousel.jpg');padding-bottom:10px; background-repeat:no-repeat; background-size:contain; border-bottom:3px solid #00b3da; }
+
+.bestfont { font-size:36px; z-index:10; color:#fff;text-shadow:0 0 0 transparent, -2px 2px 3px #003176; text-transform:none; margin-left:10px; margin-top:10px;}
+
+.bestfont2 { font-size:36px; float:center; text-align:center;z-index:10; color:#fff;text-shadow:0 0 0 transparent, -2px 2px 3px #003176; text-transform:none; margin-left:0px; margin-top:0px;}
+
+#part1 { float:left;  display:inline-block; width:320px; height:120px; margin:0; padding:0; background:#FF00AA; }
+
+ #part2 { float:left;  display:inline-block; width:320px; height:120px; margin:0; padding:0; background:#FF00AA;  }
+#part3 { float:left;  display:inline-block; width:320px; height:120px; margin:0; padding:0; background:#FF00AA;   }
+
+#midwrap {width:960px; height:auto;}
 
 
+#midcontent {width:100%; height:400px; padding-top:10px; float:left; }
+
+
+a.purplelinks {  background:#000; display: inline-block; width:320px; height:120px; position:relative; text-decoration:none;} 
