--- a/css/styles.css
+++ b/css/styles.css
@@ -423,7 +423,7 @@ body#costa_rica_surf_reviews div.nml-75 img { float:right; }
 
 /* styles */
 body { background:url(..//kalon.jpg) no-repeat center top;padding:0;margin:0; }
-#backkustom { width:100%;background-image:url(/images/bg.png); }
+#backkustom { width:100%;background-image:url(/images/rincon.jpg); }
 #wrapper { width:960px;padding:0 30px;margin:0 auto;background:#fff; }
 	#wrapper #head { overflow:hidden;background:#ffffff url(../i/bg.png); }
 		#wrapper #head h1 { padding:11px 38px 38px 38px;background-color:#ffffff;float:left;margin:0 0 0 25px;z-index:10;position:relative; }
@@ -454,25 +454,33 @@ body { background:url(..//kalon.jpg) no-repeat center top;padding:0;margin:0; }
  #nav {width: 100%; background-color:#fff;  float: left; margin: 0 0 3em 0; padding: 15px 0 15px 0; list-style-type: none;border-bottom:3px solid #00b3da; border-top:3px solid #00b3da;}
 
 #nav li {
-	float: left; padding:0 14px 0 14px;}
+	float: left; padding:0 21px 0 21px;}
 #nav li a { font-size:13px; text-transform:uppercase; color:#000; font-weight:800;}
 #nav li a:hover { text-decoration:none; color:#FF00AA; }
-
+#nav li a.current { text-decoration:none; color:#FF00AA; }
 #welcome {float:left; padding-top:10px; width:100% ; height:300px; background-image:url('/images/carousel.jpg');padding-bottom:10px; background-repeat:no-repeat; background-size:contain; border-bottom:3px solid #00b3da; }
 
-.bestfont { font-size:36px; z-index:10; color:#fff;text-shadow:0 0 0 transparent, -2px 2px 3px #003176; text-transform:none; margin-left:10px; margin-top:10px;}
+.topwest {  float:left; padding:0; margin:0; width:100% ; height:auto;  }
 
-.bestfont2 { font-size:36px; float:center; text-align:center;z-index:10; color:#fff;text-shadow:0 0 0 transparent, -2px 2px 3px #003176; text-transform:none; margin-left:0px; margin-top:0px;}
+.bestfont { font-size:36px; z-index:10; color:#fff;text-shadow:0 0 0 transparent, -2px 2px 2px #B03060; text-transform:none; margin-left:10px; margin-top:10px;}
+
+.bestfont2 { font-size:30px; float:center; text-align:center;z-index:10; color:#fff;text-shadow:0 0 0 transparent, -2px 2px 3px #003176; text-transform:none; margin:0 auto;}
+
+.bestfont3 { font-size:22px; z-index:10; color:#fff;text-shadow:0 0 0 transparent, -2px 2px 2px #B03060; text-transform:none; margin-left:10px; margin-top:10px;}
+.bestfont4 { font-size:22px; z-index:10; color:#fff;text-shadow:0 0 0 transparent, -2px 2px 2px #B03060; text-transform:none; margin-left:10px; margin-top:0px;}
 
 #part1 { float:left;  display:inline-block; width:320px; height:120px; margin:0; padding:0; background:#FF00AA; }
 
  #part2 { float:left;  display:inline-block; width:320px; height:120px; margin:0; padding:0; background:#FF00AA;  }
 #part3 { float:left;  display:inline-block; width:320px; height:120px; margin:0; padding:0; background:#FF00AA;   }
 
-#midwrap {width:960px; height:auto;}
+#midwrap {width:960px; height:120px; margin-bottom:35px; background:orange;}
 
-
+.footer1 {font-size:15px;}
 #midcontent {width:100%; height:400px; padding-top:10px; float:left; }
 
 
-a.purplelinks {  background:#000; display: inline-block; width:320px; height:120px; position:relative; text-decoration:none;} 
+a.bluelinks {  background:#00b3da; display: inline-block; width:320px; height:120px; position:relative; text-decoration:none;} 
+
+a.purplelinks {  background:#000; display: inline-block; width:320px; height:120px; position:relative; text-decoration:none;}
+a.orangelinks {  background:#FF0066; display: inline-block; width:320px; height:120px; position:relative; text-decoration:none;}
