--- a/css/styles.css
+++ b/css/styles.css
@@ -423,7 +423,7 @@ body#costa_rica_surf_reviews div.nml-75 img { float:right; }
 
 /* styles */
 body { background:url(..//kalon.jpg) no-repeat center top;padding:0;margin:0; }
-#backkustom { width:100%;background-image:url(/images/rincon.jpg); }
+#backkustom { width:100%;background-image:url(/images/bg.png); }
 #wrapper { width:960px;padding:0 30px;margin:0 auto;background:#fff; }
 	#wrapper #head { overflow:hidden;background:#ffffff url(../i/bg.png); }
 		#wrapper #head h1 { padding:11px 38px 38px 38px;background-color:#ffffff;float:left;margin:0 0 0 25px;z-index:10;position:relative; }
@@ -449,24 +449,27 @@ body { background:url(..//kalon.jpg) no-repeat center top;padding:0;margin:0; }
 
 
 /*West Kustom */
-#topnav {width:100%; height:80px;  clear:both; padding-top:25px; background:#fff; }
+#topnav {width:100%; height:135px;  clear:both; padding-top:25px; background:#fff; }
 
- #nav {width: 100%; background-color:#fff;  float: left; margin: 0 0 3em 0; padding: 15px 0 15px 0; list-style-type: none;border-bottom:3px solid #00b3da; border-top:3px solid #00b3da;}
+ #nav {width: 100%; background-color:#fff;  float: left; margin: 0 0 3em 0; padding: 15px 0 15px 0; list-style-type: none;border-bottom:3px solid #00FF00; border-top:3px solid #FF00AA ;}
 
 #nav li {
 	float: left; padding:0 21px 0 21px;}
 #nav li a { font-size:13px; text-transform:uppercase; color:#000; font-weight:800;}
 #nav li a:hover { text-decoration:none; color:#FF00AA; }
 #nav li a.current { text-decoration:none; color:#FF00AA; }
-#welcome {float:left; padding-top:10px; width:100% ; height:300px; background-image:url('/images/carousel.jpg');padding-bottom:10px; background-repeat:no-repeat; background-size:contain; border-bottom:3px solid #00b3da; }
+#welcome {float:left; padding-top:10px; width:100% ; height:300px; background-image:url('/images/carousel.jpg');padding-bottom:10px; background-repeat:no-repeat; background-size:contain; border-bottom:3px solid #FF00AA; }
 
 .topwest {  float:left; padding:0; margin:0; width:100% ; height:auto;  }
 
-.bestfont { font-size:36px; z-index:10; color:#fff;text-shadow:0 0 0 transparent, -2px 2px 2px #B03060; text-transform:none; margin-left:10px; margin-top:10px;}
+.bestfont { font-size:25px; height:50px; font-weight:700; color:#000;text-shadow:none; text-transform:none; margin-left:17px; margin-top:10px; font-family: 'Nunito', sans-serif; text-transform:uppercase; background: -webkit-linear-gradient(#eee, #222); -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;}
 
-.bestfont2 { font-size:30px; float:center; text-align:center;z-index:10; color:#fff;text-shadow:0 0 0 transparent, -2px 2px 3px #003176; text-transform:none; margin:0 auto;}
+.bestfont2 { font-size:27px; float:center; text-align:center;z-index:10; color:#000;text-shadow:0 0 0 transparent, -1px 1px 0px #00b3da; text-transform:none; margin:0 auto; margin-top:38px;}
 
-.bestfont3 { font-size:22px; z-index:10; color:#fff;text-shadow:0 0 0 transparent, -2px 2px 2px #B03060; text-transform:none; margin-left:10px; margin-top:10px;}
+.bestfont3 { font-size:15px; float:right; z-index:10; color:#FF6600;text-shadow:none; text-transform:none; margin-left:10px; margin-top:-75px; font-weight:bold;}
+.bestfont7 { font-size:15px; float:right; z-index:10; color:#000;text-shadow:none; text-transform:none; margin-left:10px; margin-top:-50px; font-weight:bold;}
+.bestfont8 { font-size:15px; float:right; z-index:10; color:#00FF00;text-shadow:none; text-transform:none; margin-left:10px; margin-top:-25px; font-weight:bold;}
 .bestfont4 { font-size:22px; z-index:10; color:#fff;text-shadow:0 0 0 transparent, -2px 2px 2px #B03060; text-transform:none; margin-left:10px; margin-top:0px;}
 
 #part1 { float:left;  display:inline-block; width:320px; height:120px; margin:0; padding:0; background:#FF00AA; }
@@ -480,7 +483,20 @@ body { background:url(..//kalon.jpg) no-repeat center top;padding:0;margin:0; }
 #midcontent {width:100%; height:400px; padding-top:10px; float:left; }
 
 
-a.bluelinks {  background:#00b3da; display: inline-block; width:320px; height:120px; position:relative; text-decoration:none;} 
+a.bluelinks {  background:#fff; display: inline-block; width:320px; height:120px; position:relative; text-decoration:none;	-webkit-box-shadow: 0 8px 6px -6px black;
+	   -moz-box-shadow: 0 8px 6px -6px black;
+	        box-shadow: 0 8px 6px -6px black;} 
 
-a.purplelinks {  background:#000; display: inline-block; width:320px; height:120px; position:relative; text-decoration:none;}
-a.orangelinks {  background:#FF0066; display: inline-block; width:320px; height:120px; position:relative; text-decoration:none;}
+a.bluelinks:hover {  background:#00FF00;}
+
+a.purplelinks:hover {background:#FF00AA;}
+
+a.orangelinks:hover { background:#FF6600;  }
+
+
+a.purplelinks {  background:#fff; display: inline-block; width:320px; height:120px; position:relative; text-decoration:none; -webkit-box-shadow: 0 8px 6px -6px black;
+	   -moz-box-shadow: 0 8px 6px -6px black;
+	        box-shadow: 0 8px 6px -6px black;}
+a.orangelinks {  background:#fff; display: inline-block; width:320px; height:120px; position:relative; text-decoration:none; -webkit-box-shadow: 0 8px 6px -6px black;
+	   -moz-box-shadow: 0 8px 6px -6px black;
+	        box-shadow: 0 8px 6px -6px black;}
