--- a/css/styles.css
+++ b/css/styles.css
@@ -462,8 +462,7 @@ body { background:url(..//kalon.jpg) no-repeat center top;padding:0;margin:0; }
 
 .topwest {  float:left; padding:0; margin:0; width:100% ; height:auto;  }
 
-.bestfont { font-size:25px; height:50px; font-weight:700; color:#000;text-shadow:none; text-transform:none; margin-left:17px; margin-top:10px; font-family: 'Nunito', sans-serif; text-transform:uppercase; background: -webkit-linear-gradient(#eee, #222); -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;}
+.bestfont { font-size:23px; height:50px; font-weight:700; color:#fff;text-shadow:0 0 0 transparent, -1px 1px 2px #00b3da; text-transform:none; margin-left:17px; margin-top:10px; font-family: 'Nunito', sans-serif; text-transform:uppercase; }
 
 .bestfont2 { font-size:27px; float:center; text-align:center;z-index:10; color:#000;text-shadow:0 0 0 transparent, -1px 1px 0px #00b3da; text-transform:none; margin:0 auto; margin-top:38px;}
 
@@ -482,6 +481,15 @@ body { background:url(..//kalon.jpg) no-repeat center top;padding:0;margin:0; }
 .footer1 {font-size:15px;}
 #midcontent {width:100%; height:400px; padding-top:10px; float:left; }
 
+#bluebee {background: rgb(42,176,237); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(42,176,237,1) 0%, rgba(159,216,239,1) 49%, rgba(191,232,249,1) 50%, rgba(228,245,252,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(42,176,237,1)), color-stop(49%,rgba(159,216,239,1)), color-stop(50%,rgba(191,232,249,1)), color-stop(100%,rgba(228,245,252,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(42,176,237,1) 0%,rgba(159,216,239,1) 49%,rgba(191,232,249,1) 50%,rgba(228,245,252,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(42,176,237,1) 0%,rgba(159,216,239,1) 49%,rgba(191,232,249,1) 50%,rgba(228,245,252,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(42,176,237,1) 0%,rgba(159,216,239,1) 49%,rgba(191,232,249,1) 50%,rgba(228,245,252,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom,  rgba(42,176,237,1) 0%,rgba(159,216,239,1) 49%,rgba(191,232,249,1) 50%,rgba(228,245,252,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2ab0ed', endColorstr='#e4f5fc',GradientType=0 ); /* IE6-9 */
+}
 
 a.bluelinks {  background:#fff; display: inline-block; width:320px; height:120px; position:relative; text-decoration:none;	-webkit-box-shadow: 0 8px 6px -6px black;
 	   -moz-box-shadow: 0 8px 6px -6px black;
