--- a/css/styles.css
+++ b/css/styles.css
@@ -451,25 +451,25 @@ body { background:url(..//kalon.jpg) no-repeat center top;padding:0;margin:0; }
 /*West Kustom */
 #topnav {width:100%; height:135px;  clear:both; padding-top:25px; background:#fff; }
 
- #nav {width: 100%; background-color:#fff;  float: left; margin: 0 0 3em 0; padding: 15px 0 15px 0; list-style-type: none;border-bottom:3px solid #00FF00; border-top:3px solid #FF00AA ;}
+ #nav {width: 100%; background-color:#fff;  float: left; margin: 0 0 3em 0; padding: 15px 0 15px 0; list-style-type: none; border-bottom:2px solid #FF00AA; }
 
 #nav li {
 	float: left; padding:0 21px 0 21px;}
 #nav li a { font-size:13px; text-transform:uppercase; color:#000; font-weight:800;}
 #nav li a:hover { text-decoration:none; color:#FF00AA; }
 #nav li a.current { text-decoration:none; color:#FF00AA; }
-#welcome {float:left; padding-top:10px; width:100% ; height:300px; background-image:url('/images/carousel.jpg');padding-bottom:10px; background-repeat:no-repeat; background-size:contain; border-bottom:3px solid #FF00AA; }
+#welcome {float:left; padding-top:10px; width:100% ; height:300px; background-image:url('/images/carousel.jpg');padding-bottom:10px; background-repeat:no-repeat; background-size:contain; border-bottom:3px solid #00FF00 ; }
 
 .topwest {  float:left; padding:0; margin:0; width:100% ; height:auto;  }
 
 .bestfont { font-size:23px; height:50px; font-weight:700; color:#fff;text-shadow:0 0 0 transparent, -1px 1px 2px #00b3da; text-transform:none; margin-left:17px; margin-top:10px; font-family: 'Nunito', sans-serif; text-transform:uppercase; }
 
-.bestfont2 { font-size:27px; float:center; text-align:center;z-index:10; color:#000;text-shadow:0 0 0 transparent, -1px 1px 0px #00b3da; text-transform:none; margin:0 auto; margin-top:38px;}
+.bestfont2 { font-size:22px; float:center; text-align:center;z-index:10; color:#fff;font-family: 'Nunito', sans-serif; font-weight:bold;text-transform:none;text-shadow:0 0 0 transparent, -1px 1px 2px #000; margin:0 auto; margin-top:38px; text-transform:uppercase}
 
-.bestfont3 { font-size:15px; float:right; z-index:10; color:#FF6600;text-shadow:none; text-transform:none; margin-left:10px; margin-top:-75px; font-weight:bold;}
-.bestfont7 { font-size:15px; float:right; z-index:10; color:#000;text-shadow:none; text-transform:none; margin-left:10px; margin-top:-50px; font-weight:bold;}
-.bestfont8 { font-size:15px; float:right; z-index:10; color:#00FF00;text-shadow:none; text-transform:none; margin-left:10px; margin-top:-25px; font-weight:bold;}
-.bestfont4 { font-size:22px; z-index:10; color:#fff;text-shadow:0 0 0 transparent, -2px 2px 2px #B03060; text-transform:none; margin-left:10px; margin-top:0px;}
+.bestfont3 { font-size:12px; float:right; z-index:10; color:#FF6600;text-shadow:none; text-transform:none; margin-left:10px; margin-top:-75px;font-family: 'Nunito', sans-serif; font-weight:bold;}
+.bestfont7 { font-size:12px; float:right; z-index:10; color:#000;text-shadow:none; font-family: 'Nunito', sans-serif;text-transform:none; font-family: 'Nunito', sans-serif; margin-left:10px; margin-top:-55px; font-weight:bold;}
+.bestfont8 { font-size:12px; float:right; z-index:10; color:#00FF00;text-shadow:none; text-transform:none; margin-left:10px; margin-top:-35px;font-family: 'Nunito', sans-serif; font-weight:bold;}
+.bestfont4 { font-size:22px; font-family: 'Nunito', sans-serif; z-index:10; color:#FF00AA; text-transform:none; margin-left:10px; margin-top:0px;}
 
 #part1 { float:left;  display:inline-block; width:320px; height:120px; margin:0; padding:0; background:#FF00AA; }
 
@@ -479,7 +479,7 @@ body { background:url(..//kalon.jpg) no-repeat center top;padding:0;margin:0; }
 #midwrap {width:960px; height:120px; margin-bottom:35px; background:orange;}
 
 .footer1 {font-size:15px;}
-#midcontent {width:100%; height:400px; padding-top:10px; float:left; }
+#midcontent {width:100%; height:700px; padding-top:10px; float:left; }
 
 #bluebee {background: rgb(42,176,237); /* Old browsers */
 background: -moz-linear-gradient(top,  rgba(42,176,237,1) 0%, rgba(159,216,239,1) 49%, rgba(191,232,249,1) 50%, rgba(228,245,252,1) 100%); /* FF3.6+ */
@@ -491,7 +491,14 @@ background: linear-gradient(to bottom,  rgba(42,176,237,1) 0%,rgba(159,216,239,1
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2ab0ed', endColorstr='#e4f5fc',GradientType=0 ); /* IE6-9 */
 }
 
-a.bluelinks {  background:#fff; display: inline-block; width:320px; height:120px; position:relative; text-decoration:none;	-webkit-box-shadow: 0 8px 6px -6px black;
+a.bluelinks {  background: rgb(42,176,237); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(42,176,237,1) 0%, rgba(159,216,239,1) 49%, rgba(191,232,249,1) 50%, rgba(228,245,252,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(42,176,237,1)), color-stop(49%,rgba(159,216,239,1)), color-stop(50%,rgba(191,232,249,1)), color-stop(100%,rgba(228,245,252,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(42,176,237,1) 0%,rgba(159,216,239,1) 49%,rgba(191,232,249,1) 50%,rgba(228,245,252,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(42,176,237,1) 0%,rgba(159,216,239,1) 49%,rgba(191,232,249,1) 50%,rgba(228,245,252,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(42,176,237,1) 0%,rgba(159,216,239,1) 49%,rgba(191,232,249,1) 50%,rgba(228,245,252,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom,  rgba(42,176,237,1) 0%,rgba(159,216,239,1) 49%,rgba(191,232,249,1) 50%,rgba(228,245,252,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2ab0ed', endColorstr='#e4f5fc',GradientType=0 ); /* IE6-9 */ display: inline-block; width:320px; height:120px; position:relative; text-decoration:none;	-webkit-box-shadow: 0 8px 6px -6px black;
 	   -moz-box-shadow: 0 8px 6px -6px black;
 	        box-shadow: 0 8px 6px -6px black;} 
 
@@ -502,9 +509,23 @@ a.purplelinks:hover {background:#FF00AA;}
 a.orangelinks:hover { background:#FF6600;  }
 
 
-a.purplelinks {  background:#fff; display: inline-block; width:320px; height:120px; position:relative; text-decoration:none; -webkit-box-shadow: 0 8px 6px -6px black;
+a.purplelinks {  background: rgb(42,176,237); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(42,176,237,1) 0%, rgba(159,216,239,1) 49%, rgba(191,232,249,1) 50%, rgba(228,245,252,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(42,176,237,1)), color-stop(49%,rgba(159,216,239,1)), color-stop(50%,rgba(191,232,249,1)), color-stop(100%,rgba(228,245,252,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(42,176,237,1) 0%,rgba(159,216,239,1) 49%,rgba(191,232,249,1) 50%,rgba(228,245,252,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(42,176,237,1) 0%,rgba(159,216,239,1) 49%,rgba(191,232,249,1) 50%,rgba(228,245,252,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(42,176,237,1) 0%,rgba(159,216,239,1) 49%,rgba(191,232,249,1) 50%,rgba(228,245,252,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom,  rgba(42,176,237,1) 0%,rgba(159,216,239,1) 49%,rgba(191,232,249,1) 50%,rgba(228,245,252,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2ab0ed', endColorstr='#e4f5fc',GradientType=0 ); /* IE6-9 */ display: inline-block; width:320px; height:120px; position:relative; text-decoration:none; -webkit-box-shadow: 0 8px 6px -6px black;
 	   -moz-box-shadow: 0 8px 6px -6px black;
 	        box-shadow: 0 8px 6px -6px black;}
-a.orangelinks {  background:#fff; display: inline-block; width:320px; height:120px; position:relative; text-decoration:none; -webkit-box-shadow: 0 8px 6px -6px black;
+a.orangelinks {  background: rgb(42,176,237); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(42,176,237,1) 0%, rgba(159,216,239,1) 49%, rgba(191,232,249,1) 50%, rgba(228,245,252,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(42,176,237,1)), color-stop(49%,rgba(159,216,239,1)), color-stop(50%,rgba(191,232,249,1)), color-stop(100%,rgba(228,245,252,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(42,176,237,1) 0%,rgba(159,216,239,1) 49%,rgba(191,232,249,1) 50%,rgba(228,245,252,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(42,176,237,1) 0%,rgba(159,216,239,1) 49%,rgba(191,232,249,1) 50%,rgba(228,245,252,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(42,176,237,1) 0%,rgba(159,216,239,1) 49%,rgba(191,232,249,1) 50%,rgba(228,245,252,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom,  rgba(42,176,237,1) 0%,rgba(159,216,239,1) 49%,rgba(191,232,249,1) 50%,rgba(228,245,252,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2ab0ed', endColorstr='#e4f5fc',GradientType=0 ); /* IE6-9 */ display: inline-block; width:320px; height:120px; position:relative; text-decoration:none; -webkit-box-shadow: 0 8px 6px -6px black;
 	   -moz-box-shadow: 0 8px 6px -6px black;
 	        box-shadow: 0 8px 6px -6px black;}
