--- a/css/styles.css
+++ b/css/styles.css
@@ -466,9 +466,9 @@ body { background:url(..//kalon.jpg) no-repeat center top;padding:0;margin:0; }
 
 .bestfont2 { font-size:22px; float:center; text-align:center;z-index:10; color:#fff;font-family: 'Nunito', sans-serif; font-weight:bold;text-transform:none;text-shadow:0 0 0 transparent, -1px 1px 2px #000; margin:0 auto; margin-top:38px; text-transform:uppercase}
 
-.bestfont3 { font-size:12px; float:right; z-index:10; color:#FF6600;text-shadow:none; text-transform:none; margin-left:10px; margin-top:-75px;font-family: 'Nunito', sans-serif; font-weight:bold;}
-.bestfont7 { font-size:12px; float:right; z-index:10; color:#000;text-shadow:none; font-family: 'Nunito', sans-serif;text-transform:none; font-family: 'Nunito', sans-serif; margin-left:10px; margin-top:-55px; font-weight:bold;}
-.bestfont8 { font-size:12px; float:right; z-index:10; color:#00FF00;text-shadow:none; text-transform:none; margin-left:10px; margin-top:-35px;font-family: 'Nunito', sans-serif; font-weight:bold;}
+.bestfont3 { font-size:12px; float:right; z-index:10; color: #00b3da;text-shadow:none; text-transform:none; margin-left:10px; margin-top:-75px;font-family: 'Nunito', sans-serif; font-weight:bold;}
+.bestfont7 { font-size:12px; float:right; z-index:10; color:#00FF00;text-shadow:none; font-family: 'Nunito', sans-serif;text-transform:none; font-family: 'Nunito', sans-serif; margin-left:10px; margin-top:-55px; font-weight:bold;}
+.bestfont8 { font-size:12px; float:right; z-index:10; color:#000;text-shadow:none; text-transform:none; margin-left:10px; margin-top:-35px;font-family: 'Nunito', sans-serif; font-weight:bold;}
 .bestfont4 { font-size:22px; font-family: 'Nunito', sans-serif; z-index:10; color:#FF00AA; text-transform:none; margin-left:10px; margin-top:0px;}
 
 #part1 { float:left;  display:inline-block; width:320px; height:120px; margin:0; padding:0; background:#FF00AA; }
