--- a/css/styles.css
+++ b/css/styles.css
@@ -422,7 +422,7 @@ body#costa_rica_surf_reviews div.nml-75 img { float:right; }
 
 
 /* styles */
-body { background:url(..//kalon.jpg) no-repeat center top;padding:0;margin:0; }
+body { background:none;padding:0;margin:0; }
 #backkustom { width:100%;background-image:url(/images/bg.png); }
 #wrapper { width:960px;padding:0 30px;margin:0 auto;background:#fff; }
 	#wrapper #head { overflow:hidden;background:#ffffff url(../i/bg.png); }
@@ -455,23 +455,23 @@ body { background:url(..//kalon.jpg) no-repeat center top;padding:0;margin:0; }
 
 #nav li {
 	float: left; padding:0 21px 0 21px;}
-#nav li a { font-size:13px; text-transform:uppercase; color:#000; font-weight:800;}
-#nav li a:hover { text-decoration:none; color:#FF00AA; }
+#nav li a { font-size:13px; text-transform:uppercase; color:#FF00AA; font-weight:800;}
+#nav li a:hover { text-decoration:none; color:#FF6600; }
 #nav li a.current { text-decoration:none; color:#FF00AA; }
 #welcome {float:left; padding-top:10px; width:100% ; height:300px; background-image:url('/images/carousel.jpg');padding-bottom:10px; background-repeat:no-repeat; background-size:contain; border-bottom:3px solid #00FF00 ; }
 
 .topwest {  float:left; padding:0; margin:0; width:100% ; height:auto;  }
 
-.bestfont { font-size:23px; height:50px; font-weight:700; color:#fff;text-shadow:0 0 0 transparent, -1px 1px 2px #00b3da; text-transform:none; margin-left:17px; margin-top:10px; font-family: 'Nunito', sans-serif; text-transform:uppercase; }
+.bestfont { font-size:23px; height:50px; font-weight:700; color:#fff;text-shadow:0 0 0 transparent, -1px 1px 2px #00b3da; text-transform:none; margin-left:17px; margin-top:15px; padding-top:5px;font-family: 'Nunito', sans-serif; text-transform:uppercase; }
 
-.bestfont2 { font-size:22px; float:center; text-align:center;z-index:10; color:#fff;font-family: 'Nunito', sans-serif; font-weight:bold;text-transform:none;text-shadow:0 0 0 transparent, -1px 1px 2px #000; margin:0 auto; margin-top:38px; text-transform:uppercase}
+.bestfont2 { font-size:23px; float:center; text-align:center;z-index:10; color:#fff;font-family: 'Nunito', sans-serif; font-weight:800;text-transform:none;text-shadow:0 0 0 transparent, -1px 1px 2px #000; margin:0 auto; margin-top:38px; text-transform:uppercase}
 
 .bestfont3 { font-size:12px; float:right; z-index:10; color: #00b3da;text-shadow:none; text-transform:none; margin-left:10px; margin-top:-75px;font-family: 'Nunito', sans-serif; font-weight:bold;}
 .bestfont7 { font-size:12px; float:right; z-index:10; color:#00FF00;text-shadow:none; font-family: 'Nunito', sans-serif;text-transform:none; font-family: 'Nunito', sans-serif; margin-left:10px; margin-top:-55px; font-weight:bold;}
 .bestfont8 { font-size:12px; float:right; z-index:10; color:#000;text-shadow:none; text-transform:none; margin-left:10px; margin-top:-35px;font-family: 'Nunito', sans-serif; font-weight:bold;}
-.bestfont4 { font-size:22px; font-family: 'Nunito', sans-serif; z-index:10; color:#FF00AA; text-transform:none; margin-left:10px; margin-top:0px;}
+.bestfont4 { font-size:22px; font-family: 'Nunito', sans-serif; z-index:10; color:#FF00AA; text-transform:none; margin-left:10px; margin-top:0px;text-shadow:0 0 0 transparent, -1px 1px 2px #000;}
 
-#part1 { float:left;  display:inline-block; width:320px; height:120px; margin:0; padding:0; background:#FF00AA; }
+#part1 { float:left;  display:inline-block; width:320px; height:120px; margin:0; padding:0; background:#FF00AA;}
 
  #part2 { float:left;  display:inline-block; width:320px; height:120px; margin:0; padding:0; background:#FF00AA;  }
 #part3 { float:left;  display:inline-block; width:320px; height:120px; margin:0; padding:0; background:#FF00AA;   }
