--- a/css/styles.css
+++ b/css/styles.css
@@ -144,8 +144,8 @@ body { background:none;padding:0;margin:0; }
 
 .bestfont2 { font-size:23px; float:center; text-align:center;z-index:10; color:#fff;font-family: 'Nunito', sans-serif; font-weight:800;text-transform:none;text-shadow:0 0 0 transparent, -1px 1px 2px #000; margin-left:5px; margin-top:75px; text-transform:uppercase}
 
-.bestfont3 { font-size:12px; float:right; z-index:10; color: #00b3da;text-shadow:none; text-transform:none; margin-left:10px; margin-top:-75px;font-family: 'Nunito', sans-serif; font-weight:bold;}
-.bestfont7 { font-size:12px; float:right; z-index:10; color:#00FF00;text-shadow:none; font-family: 'Nunito', sans-serif;text-transform:none; font-family: 'Nunito', sans-serif; margin-left:10px; margin-top:-55px; font-weight:bold;}
+.bestfont3 { font-size:12px; float:right; z-index:10; color: #000;text-shadow:none; text-transform:none; margin-left:10px; margin-top:-75px;font-family: 'Nunito', sans-serif; font-weight:bold;}
+.bestfont7 { font-size:12px; float:right; z-index:10; color:#000;text-shadow:none; font-family: 'Nunito', sans-serif;text-transform:none; font-family: 'Nunito', sans-serif; margin-left:10px; margin-top:-55px; font-weight:bold;}
 .bestfont8 { font-size:12px; float:right; z-index:10; color:#000;text-shadow:none; text-transform:none; margin-left:10px; margin-top:-35px;font-family: 'Nunito', sans-serif; font-weight:bold;}
 .bestfont4 { font-size:24px; font-family: 'Nunito', sans-serif; z-index:10; color:#FF00AA; text-transform:none; margin-left:10px; margin-top:10px;text-shadow:0 0 0 transparent, -1px 1px 2px #000;}
 
