--- a/css/styles.css
+++ b/css/styles.css
@@ -74,11 +74,7 @@ div.infoboxwhite { background:transparent url(../i/blue.jpg);margin:0;padding:30
 div.infoboxx { background:transparent;margin:0;padding:30px;color:#ffffff;border-radius:10px;-moz-border-radius:10px; }
 div.infobox { background:transparent url(../i/denim.jpg);margin:0;padding:30px;color:#ffffff;border-radius:10px;-moz-border-radius:10px; }
 .ofh { overflow:hidden; }
-.nml-200 { }
-.nml-200 img { margin-left:-200px;margin-top:0px; }
-.nml-75 { margin-right:-30px; }
-.nml-75 img { margin-left:0px;position:relative; }
-.facebook { padding:5px 0 0 0; }
+
 img.too-cool-for-mug-shots { }
 hr { background-color:transparent;border:none;border-top:1px dotted #40c6e3;margin:0;padding:0; }
 .blue { color:#00b3da; }
@@ -127,13 +123,13 @@ body { background:none;padding:0;margin:0; }
 	
 	
 /*West Kustom */
-#topnav {width:100%; height:75px;  clear:both; padding-top:25px; background:#fff; }
-
+#topnav {width:100%; height:165px;  padding-top:25px; background:#fff; }
+#pikeylogo { margin-top:27px; float:left;}
  #nav {width: 100%; background-color:#fff;  float: left; margin: 0 0 3em 0; padding: 15px 0 15px 0; list-style-type: none; border-bottom:2px solid #FF00AA; }
 
 #nav li {
 	float: left; padding:0 21px 0 21px;}
-#nav li a { font-size:13px; text-transform:uppercase; color:#7AC5CD; font-weight:800;}
+#nav li a { font-size:13px; text-transform:uppercase; color:#7a9ccd; font-weight:800;}
 #nav li a:hover { text-decoration:none; color:#ff1ab3; }
 #nav li a.current { text-decoration:none; color:#FF00AA; }
 #welcome {float:left; padding-top:10px; width:100% ; height:311px; background-image:url('/images/carousel.jpg');padding-bottom:10px; background-repeat:no-repeat; background-size:contain; border-bottom:3px solid #00FF00 ; }
@@ -142,34 +138,45 @@ body { background:none;padding:0;margin:0; }
 
 .bestfont { font-size:23px; height:50px; font-weight:700; color:#fff;text-shadow:0 0 0 transparent, -1px 1px 2px #00b3da; text-transform:none; margin-left:17px; margin-top:15px; padding-top:5px;font-family: 'Nunito', sans-serif; text-transform:uppercase; }
 
-.bestfont2 { font-size:23px; float:center; text-align:center;z-index:10; color:#fff;font-family: 'Nunito', sans-serif; font-weight:800;text-transform:none;text-shadow:0 0 0 transparent, -1px 1px 2px #000; margin-left:5px; margin-top:75px; text-transform:uppercase}
+.bestfont2 { font-size:21px; float:center; text-align:center;z-index:10; color:#fff;font-family: 'Nunito', sans-serif; font-weight:800;text-transform:none;text-shadow:0 0 0 transparent, -1px 1px 2px #000; margin-left:3px; margin-top:65px; text-transform:uppercase}
 
 .bestfont3 { font-size:12px; float:right; z-index:10; color: #000;text-shadow:none; text-transform:none; margin-left:10px; margin-top:-75px;font-family: 'Nunito', sans-serif; font-weight:bold;}
 .bestfont7 { font-size:12px; float:right; z-index:10; color:#000;text-shadow:none; font-family: 'Nunito', sans-serif;text-transform:none; font-family: 'Nunito', sans-serif; margin-left:10px; margin-top:-55px; font-weight:bold;}
 .bestfont8 { font-size:12px; float:right; z-index:10; color:#000;text-shadow:none; text-transform:none; margin-left:10px; margin-top:-35px;font-family: 'Nunito', sans-serif; font-weight:bold;}
 .bestfont4 { font-size:24px; font-family: 'Nunito', sans-serif; z-index:10; color:#FF00AA; text-transform:none; margin-left:10px; margin-top:10px;text-shadow:0 0 0 transparent, -1px 1px 2px #000;}
 
-#part1 { display:inline-block; float:right; margin-right:10px; margin-bottom:10px;width: 180px;
-    height: 180px;
+#part1 { display:inline-block;margin-top:-25px; float:right; margin-right:10px; margin-bottom:10px;width: 150px;
+    height: 150px;
     -moz-border-radius: 50%; 
     -webkit-border-radius: 50%; 
-    border-radius: 50%; background:#ff1ab3;}
+    border-radius: 50%; background-image: -webkit-gradient(
+	linear,
+	left top,
+	left bottom,
+	color-stop(0, #FF0C4F),
+	color-stop(1, #FF276F)
+);
+background-image: -o-linear-gradient(bottom, #FF0C4F 0%, #FF276F 100%);
+background-image: -moz-linear-gradient(bottom, #FF0C4F 0%, #FF276F 100%);
+background-image: -webkit-linear-gradient(bottom, #FF0C4F 0%, #FF276F 100%);
+background-image: -ms-linear-gradient(bottom, #FF0C4F 0%, #FF276F 100%);
+background-image: linear-gradient(to bottom, #FF0C4F 0%, #FF276F 100%);}
 
-a.purplelinks { display: inline-block;  width: 180px;
-    height: 180px; position:relative; text-decoration:none; -webkit-box-shadow: 0 8px 6px -6px black; -moz-box-shadow: 0 8px 6px -6px black;box-shadow: 0 8px 6px -6px black;moz-border-radius: 50%; 
+a.purplelinks { display: inline-block;  width: 150px;
+    height: 150px; position:relative; text-decoration:none; -webkit-box-shadow: 0 8px 6px -6px black; -moz-box-shadow: 0 8px 6px -6px black;box-shadow: 0 8px 6px -6px black;moz-border-radius: 50%; 
     -webkit-border-radius: 50%; 
     border-radius: 50%;}
  a.purplelinks:hover {background:#ff4dc4;}
 
 
-#part2 { margin-right:10px;display:inline-block; margin-bottom:10px; float:right;width: 180px;
-    height: 180px;
+#part2 { margin-right:10px;display:inline-block;margin-top:-25px; margin-bottom:10px; float:right;width: 150px;
+    height: 150px;
     -moz-border-radius: 50%; 
     -webkit-border-radius: 50%; 
     border-radius: 50%; background:#FF00AA;}
 
-a.bluelinks {  display: inline-block; width: 180px;
-    height: 180px;
+a.bluelinks {  display: inline-block; width: 150px;
+    height: 150px;
     -moz-border-radius: 50%; 
     -webkit-border-radius: 50%; 
     border-radius: 50%;position:relative; text-decoration:none;	-webkit-box-shadow: 0 8px 6px -6px black; background:#00FF00;
@@ -178,17 +185,15 @@ a.bluelinks {  display: inline-block; width: 180px;
 
 a.bluelinks:hover {  background:#00FF00;}
 
-#part3 { display:inline-block; margin-right:20px; margin-bottom:10px; float:right; width: 180px;
-    height: 180px;
+#part3 { display:inline-block; margin-right:20px;margin-top:-25px; margin-bottom:10px; float:right; width: 150px;
+    height: 150px;
     -moz-border-radius: 50%; 
     -webkit-border-radius: 50%; 
     border-radius: 50%; background:#FF6600;}
 
-a.orangelinks {  display:inline-block; width:180px; height:180px; position:relative; text-decoration:none;z-border-radius: 50%; 
+a.orangelinks {  display:inline-block; width:150px; height:150px; position:relative; text-decoration:none;z-border-radius: 50%; 
     -webkit-border-radius: 50%; 
-    border-radius: 50%; background:#FF6600; -webkit-box-shadow: 0 8px 6px -6px black;
-	   -moz-box-shadow: 0 8px 6px -6px black;
-	        box-shadow: 0 8px 6px -6px black;}
+    border-radius: 50%; }
 
 
 
