--- a/css/styles.css
+++ b/css/styles.css
@@ -84,16 +84,26 @@ div.infobox { background:transparent url(../i/denim.jpg);margin:0;padding:30px;c
 	
 /* styles */
 body { background:none;padding:0;margin:0; }
-#backkustom { width:100%;background: rgb(235,233,249); /* Old browsers */
-background: -moz-linear-gradient(top,  rgba(235,233,249,1) 0%, rgba(216,208,239,1) 50%, rgba(206,199,236,1) 51%, rgba(193,191,234,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(235,233,249,1)), color-stop(50%,rgba(216,208,239,1)), color-stop(51%,rgba(206,199,236,1)), color-stop(100%,rgba(193,191,234,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  rgba(235,233,249,1) 0%,rgba(216,208,239,1) 50%,rgba(206,199,236,1) 51%,rgba(193,191,234,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  rgba(235,233,249,1) 0%,rgba(216,208,239,1) 50%,rgba(206,199,236,1) 51%,rgba(193,191,234,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  rgba(235,233,249,1) 0%,rgba(216,208,239,1) 50%,rgba(206,199,236,1) 51%,rgba(193,191,234,1) 100%); /* IE10+ */
-background: linear-gradient(to bottom,  rgba(235,233,249,1) 0%,rgba(216,208,239,1) 50%,rgba(206,199,236,1) 51%,rgba(193,191,234,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ebe9f9', endColorstr='#c1bfea',GradientType=0 ); /* IE6-9 */
+#backkustom { width:100%;	
+/* IE10 Consumer Preview */ 
+background-image: -ms-linear-gradient(top, #FFFFFF 0%, #E8E8E8 100%);
+
+/* Mozilla Firefox */ 
+background-image: -moz-linear-gradient(top, #FFFFFF 0%, #E8E8E8 100%);
+
+/* Opera */ 
+background-image: -o-linear-gradient(top, #FFFFFF 0%, #E8E8E8 100%);
+
+/* Webkit (Safari/Chrome 10) */ 
+background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #FFFFFF), color-stop(1, #E8E8E8));
+
+/* Webkit (Chrome 11+) */ 
+background-image: -webkit-linear-gradient(top, #FFFFFF 0%, #E8E8E8 100%);
+
+/* W3C Markup, IE10 Release Preview */ 
+background-image: linear-gradient(to bottom, #FFFFFF 0%, #E8E8E8 100%);
 }
-#wrapper { width:1070px;padding:0 30px;margin:0 auto;background:#fff; }
+#wrapper { width:1070px;padding:0 30px;margin:0 auto;background:#fff;box-shadow: 12px 0 8px -4px #9addff, -12px 0 8px -4px #4dc4ff; }
 	
 
 	
@@ -162,18 +172,18 @@ a.orangelinks {  display:inline-block; width:146px; height:146px; position:relat
 a.orangelinks:hover { background:#000; }
 
 
-#part4 { display:inline-block; margin-right0px;margin-top:0px; margin-bottom:10px; float:left; width: 146px;
+#part4 { display:inline-block; margin-right0px;margin-top:0px; margin-bottom:10px; margin-right:10px; float:left; width: 146px;
     height: 146px;
     -moz-border-radius: 50%; 
     -webkit-border-radius: 50%; 
-    border-radius: 50%; background-image:url(/images/piked.jpg);}
+    border-radius: 50%; background-image:url(/images/piked.jpg);background-size:cover;background-position: left 0px top 0px;}
 
 
 .footer1 {font-size:15px;}
 
 #midcontent {width:100%; height:700px; padding-top:30px; float:left; }
 
-#introp {padding-left:10px;}
+#introp {margin-left:10px;text-indent:10px; font-size:14px;}
 
 #pikevim {margin-left:500px;}
 
